Templete (#1)
* revert

* created templet

* added .idea

* added README.md

* added README.md

* added ide_settngs